// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/SessionCalendar/SessionCalendarRow component renders fine 1`] = `
<tr
  onClick={[Function]}
  onKeyDown={[Function]}
  tabIndex="0"
>
  <SessionCalendarDateCell
    disabled={true}
    prefixCls="test-an-sc"
    rowDate={"2018-12-23T00:00:00.000Z"}
    selected={false}
    selectionEnd={false}
    selectionStart={true}
    today={false}
    waiting={false}
  />
  <SessionCalendarDateCell
    disabled={true}
    prefixCls="test-an-sc"
    rowDate={"2018-12-24T00:00:00.000Z"}
    selected={false}
    selectionEnd={false}
    selectionStart={false}
    today={true}
    waiting={false}
  />
  <SessionCalendarDateCell
    disabled={true}
    prefixCls="test-an-sc"
    rowDate={"2018-12-25T00:00:00.000Z"}
    selected={false}
    selectionEnd={false}
    selectionStart={false}
    today={false}
    waiting={false}
  />
  <SessionCalendarDateCell
    disabled={true}
    prefixCls="test-an-sc"
    rowDate={"2018-12-26T00:00:00.000Z"}
    selected={false}
    selectionEnd={true}
    selectionStart={false}
    today={false}
    waiting={false}
  />
  <SessionCalendarDateCell
    disabled={true}
    prefixCls="test-an-sc"
    rowDate={"2018-12-27T00:00:00.000Z"}
    selected={false}
    selectionEnd={false}
    selectionStart={true}
    today={false}
    waiting={true}
  />
  <SessionCalendarDateCell
    disabled={true}
    prefixCls="test-an-sc"
    rowDate={"2018-12-28T00:00:00.000Z"}
    selected={false}
    selectionEnd={false}
    selectionStart={false}
    today={false}
    waiting={true}
  />
  <SessionCalendarDateCell
    disabled={true}
    prefixCls="test-an-sc"
    rowDate={"2018-12-29T00:00:00.000Z"}
    selected={false}
    selectionEnd={true}
    selectionStart={false}
    today={false}
    waiting={true}
  />
</tr>
`;

exports[`components/SessionCalendar/SessionCalendarRow component renders fine if it do not disable expired dates 1`] = `
<tr
  onClick={[Function]}
  onKeyDown={[Function]}
  tabIndex="0"
>
  <SessionCalendarDateCell
    disabled={false}
    prefixCls="test-an-sc"
    rowDate={"2018-12-23T00:00:00.000Z"}
    selected={false}
    selectionEnd={false}
    selectionStart={true}
    today={false}
    waiting={false}
  />
  <SessionCalendarDateCell
    disabled={false}
    prefixCls="test-an-sc"
    rowDate={"2018-12-24T00:00:00.000Z"}
    selected={false}
    selectionEnd={false}
    selectionStart={false}
    today={true}
    waiting={false}
  />
  <SessionCalendarDateCell
    disabled={false}
    prefixCls="test-an-sc"
    rowDate={"2018-12-25T00:00:00.000Z"}
    selected={false}
    selectionEnd={false}
    selectionStart={false}
    today={false}
    waiting={false}
  />
  <SessionCalendarDateCell
    disabled={false}
    prefixCls="test-an-sc"
    rowDate={"2018-12-26T00:00:00.000Z"}
    selected={false}
    selectionEnd={true}
    selectionStart={false}
    today={false}
    waiting={false}
  />
  <SessionCalendarDateCell
    disabled={false}
    prefixCls="test-an-sc"
    rowDate={"2018-12-27T00:00:00.000Z"}
    selected={false}
    selectionEnd={false}
    selectionStart={true}
    today={false}
    waiting={true}
  />
  <SessionCalendarDateCell
    disabled={false}
    prefixCls="test-an-sc"
    rowDate={"2018-12-28T00:00:00.000Z"}
    selected={false}
    selectionEnd={true}
    selectionStart={false}
    today={false}
    waiting={true}
  />
  <SessionCalendarDateCell
    disabled={true}
    prefixCls="test-an-sc"
    rowDate={"2018-12-29T00:00:00.000Z"}
    selected={false}
    selectionEnd={true}
    selectionStart={false}
    today={false}
    waiting={true}
  />
</tr>
`;

exports[`components/SessionCalendar/SessionCalendarRow component renders fine if it do not disable the date which are after the last session day 1`] = `
<tr
  onClick={[Function]}
  onKeyDown={[Function]}
  tabIndex="0"
>
  <SessionCalendarDateCell
    disabled={true}
    prefixCls="test-an-sc"
    rowDate={"2018-12-23T00:00:00.000Z"}
    selected={false}
    selectionEnd={false}
    selectionStart={true}
    today={false}
    waiting={false}
  />
  <SessionCalendarDateCell
    disabled={true}
    prefixCls="test-an-sc"
    rowDate={"2018-12-24T00:00:00.000Z"}
    selected={false}
    selectionEnd={false}
    selectionStart={false}
    today={true}
    waiting={false}
  />
  <SessionCalendarDateCell
    disabled={true}
    prefixCls="test-an-sc"
    rowDate={"2018-12-25T00:00:00.000Z"}
    selected={false}
    selectionEnd={false}
    selectionStart={false}
    today={false}
    waiting={false}
  />
  <SessionCalendarDateCell
    disabled={true}
    prefixCls="test-an-sc"
    rowDate={"2018-12-26T00:00:00.000Z"}
    selected={false}
    selectionEnd={true}
    selectionStart={false}
    today={false}
    waiting={false}
  />
  <SessionCalendarDateCell
    disabled={true}
    prefixCls="test-an-sc"
    rowDate={"2018-12-27T00:00:00.000Z"}
    selected={false}
    selectionEnd={false}
    selectionStart={true}
    today={false}
    waiting={true}
  />
  <SessionCalendarDateCell
    disabled={true}
    prefixCls="test-an-sc"
    rowDate={"2018-12-28T00:00:00.000Z"}
    selected={false}
    selectionEnd={false}
    selectionStart={false}
    today={false}
    waiting={true}
  />
  <SessionCalendarDateCell
    disabled={true}
    prefixCls="test-an-sc"
    rowDate={"2018-12-29T00:00:00.000Z"}
    selected={false}
    selectionEnd={true}
    selectionStart={false}
    today={false}
    waiting={true}
  />
</tr>
`;

exports[`components/SessionCalendar/SessionCalendarRow component renders fine if the whole row is disabled 1`] = `
<tr
  onClick={[Function]}
  onKeyDown={[Function]}
  tabIndex=""
>
  <SessionCalendarDateCell
    disabled={true}
    prefixCls="test-an-sc"
    rowDate={"2018-12-23T00:00:00.000Z"}
    selected={false}
    selectionEnd={false}
    selectionStart={true}
    today={false}
    waiting={false}
  />
  <SessionCalendarDateCell
    disabled={true}
    prefixCls="test-an-sc"
    rowDate={"2018-12-24T00:00:00.000Z"}
    selected={false}
    selectionEnd={false}
    selectionStart={false}
    today={true}
    waiting={false}
  />
  <SessionCalendarDateCell
    disabled={true}
    prefixCls="test-an-sc"
    rowDate={"2018-12-25T00:00:00.000Z"}
    selected={false}
    selectionEnd={false}
    selectionStart={false}
    today={false}
    waiting={false}
  />
  <SessionCalendarDateCell
    disabled={true}
    prefixCls="test-an-sc"
    rowDate={"2018-12-26T00:00:00.000Z"}
    selected={false}
    selectionEnd={true}
    selectionStart={false}
    today={false}
    waiting={false}
  />
  <SessionCalendarDateCell
    disabled={true}
    prefixCls="test-an-sc"
    rowDate={"2018-12-27T00:00:00.000Z"}
    selected={false}
    selectionEnd={false}
    selectionStart={true}
    today={false}
    waiting={true}
  />
  <SessionCalendarDateCell
    disabled={true}
    prefixCls="test-an-sc"
    rowDate={"2018-12-28T00:00:00.000Z"}
    selected={false}
    selectionEnd={false}
    selectionStart={false}
    today={false}
    waiting={true}
  />
  <SessionCalendarDateCell
    disabled={true}
    prefixCls="test-an-sc"
    rowDate={"2018-12-29T00:00:00.000Z"}
    selected={false}
    selectionEnd={true}
    selectionStart={false}
    today={false}
    waiting={true}
  />
</tr>
`;

exports[`components/SessionCalendar/SessionCalendarRow component renders fine with selected session dates 1`] = `
<tr
  onClick={[Function]}
  onKeyDown={[Function]}
  tabIndex="0"
>
  <SessionCalendarDateCell
    disabled={true}
    prefixCls="test-an-sc"
    rowDate={"2018-12-23T00:00:00.000Z"}
    selected={true}
    selectionEnd={false}
    selectionStart={true}
    today={false}
    waiting={false}
  />
  <SessionCalendarDateCell
    disabled={true}
    prefixCls="test-an-sc"
    rowDate={"2018-12-24T00:00:00.000Z"}
    selected={true}
    selectionEnd={false}
    selectionStart={false}
    today={true}
    waiting={false}
  />
  <SessionCalendarDateCell
    disabled={true}
    prefixCls="test-an-sc"
    rowDate={"2018-12-25T00:00:00.000Z"}
    selected={true}
    selectionEnd={false}
    selectionStart={false}
    today={false}
    waiting={false}
  />
  <SessionCalendarDateCell
    disabled={true}
    prefixCls="test-an-sc"
    rowDate={"2018-12-26T00:00:00.000Z"}
    selected={true}
    selectionEnd={true}
    selectionStart={false}
    today={false}
    waiting={false}
  />
  <SessionCalendarDateCell
    disabled={true}
    prefixCls="test-an-sc"
    rowDate={"2018-12-27T00:00:00.000Z"}
    selected={true}
    selectionEnd={false}
    selectionStart={true}
    today={false}
    waiting={true}
  />
  <SessionCalendarDateCell
    disabled={true}
    prefixCls="test-an-sc"
    rowDate={"2018-12-28T00:00:00.000Z"}
    selected={true}
    selectionEnd={false}
    selectionStart={false}
    today={false}
    waiting={true}
  />
  <SessionCalendarDateCell
    disabled={true}
    prefixCls="test-an-sc"
    rowDate={"2018-12-29T00:00:00.000Z"}
    selected={true}
    selectionEnd={true}
    selectionStart={false}
    today={false}
    waiting={true}
  />
</tr>
`;
